kubernetes/yamls/ingress-demo/dino-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dino
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dino.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dino-main
            port:
              number: 80
